[package]
name = "rch_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.16"
tokio = { version = "1.27", features = [ "macros", "rt-multi-thread", ] }
tower-http = { version = "0.4", features = ["cors", "fs", "limit" ] }
serde = { version = "1.0.160", features = ["derive"] }
chrono = "0.4.24"
serde_json = "1.0.107"
rand = "0.8.5"
base64 = "0.21.5"
toml = "0.8.8"
anyhow = "1.0.75"
