[package]
name = "rch_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.16"
tokio = { version = "1.35", features = [ "macros", "rt-multi-thread", ] }
tower-http = { version = "0.4", features = ["cors", "fs", "limit" ] }
chrono = "0.4.24"
serde_json = "1.0.107"
rand = "0.8.5"
base64 = "0.21.5"
rmp-serde = "1.1.2"
ref_struct = { git = "https://github.com/Nikita-str/ref_struct.git" }
strum = "0.25.0"
strum_macros = "0.25.3"
sha3 = "0.10.8"
hex = "0.4.3"
futures = "0.3.30"
pin-project-lite = "0.2.13"

# workspace dependencies:
toml = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }

# workspace dependencies:
rch_config = { path = "../config" }

[build-dependencies]
rch_config = { path = "../config" }
